# adv_analytics

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  run_end_to_end.py  setup.py
.github/workflows/: ci.yml  publish.yml
adsat/: __init__.py  attribution.py  benchmark.py  budget.py  campaign.py  diagnostics.py  distribution.py  evaluation.py  exploratory.py  modeling.py  pipeline.py  report.py  response_curves.py  seasonality.py  simulation.py  transformation.py
examples/: example_full_pipeline.py  example_per_campaign.py
tests/: conftest.py  test_adsat.py
