[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "adsat"
version = "0.5.0"
description = "Advertising Saturation Analysis Toolkit – identify impression saturation points in ad campaign data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Stefano Bandera", email = "mr.stefanobandera@gmail.com" },
]
maintainers = [
    { name = "Stefano Bandera", email = "mr.stefanobandera@gmail.com" },
]
keywords = [
    "advertising",
    "saturation",
    "media-mix-modelling",
    "mmm",
    "impressions",
    "hill-function",
    "marketing-analytics",
    "diminishing-returns",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
bayesian = [
    "pymc>=5.0",
    "arviz>=0.15",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "twine>=4.0",
    "build>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]
all = [
    "adsat[bayesian,dev,docs]",
]

[project.urls]
Homepage       = "https://github.com/stefanobandera1/adsat"
Documentation  = "https://adsat.readthedocs.io"
Repository     = "https://github.com/stefanobandera1/adsat"
"Bug Tracker"  = "https://github.com/stefanobandera1/adsat/issues"
Changelog      = "https://github.com/stefanobandera1/adsat/blob/main/CHANGELOG.md"

# ─────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["adsat*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
adsat = ["py.typed"]

[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["adsat"]
omit   = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under   = 65
